--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "lint": "standard --fix"
   },
   "dependencies": {
+    "colors": "^1.3.2",
     "js-yaml": "^3.11.0",
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
-    "probot": "^6.2.0",
-    "probot-scheduler": "^1.1.0",
-    "colors": "^1.3.2"
+    "probot": "^9.5.0",
+    "probot-scheduler": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "jest": "^21.2.1",
